# rag-pipeline

./: .gitignore  README.md  chunking.py  docling_chunking.py  document_loader.py  main.py  main_no_print.py  openai_services.py  pdf_output.md  pyproject.toml  vector_search.py
archive/: chunking-demo.py  langchain-chunking.py  langchain_simple_chunking.py
data/: langchain_simple_chunks_BEFORE_embeddings.csv  langchain_simple_chunks_with_embeddings.csv
